fix mobile bottom white space

--- a/css/electrode.scss
+++ b/css/electrode.scss
@@ -907,6 +907,7 @@ img.footer-sub-logo {
    .electrode-modules,
    #second-nav,
    #electrode-modules,
+   #modules-section,
    #electrode-footer,
    #social-header-color-links {
     display: none;
@@ -1158,7 +1159,7 @@ img.footer-sub-logo {
 }
 
 #modules-section {
-  margin-bottom: 200px;
+  margin-bottom: 250px;
 }
 
 #module-icon {
@@ -1170,10 +1171,6 @@ img.footer-sub-logo {
 #desktop-modules-header {
   text-align: center;
   margin: 50px 20px;
-}
-
-#modules-section {
-  padding: 50px;
 }
 
 .module-subheader {
